initial rework of how module is installed

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+scratch*
+
+# Actual package directory always created 
+# dynamically
+kimvv/*
+pyproject.toml
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
