--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 scratch*
 output/
 
-# Actual package directory always created 
+# Actual package directory always created
 # dynamically
-kimvv/*
+kimvv/*/
+kimvv/__init__.py
 pyproject.toml
+MANIFEST.in
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -166,4 +168,3 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-
