--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install --upgrade -r requirements-dev.txt
     - name: Build package
-      run: python -m build
+      run: |
+        python pre_setup.py
+        python -m build
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@release/v1.12
