--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,7 @@ jobs:
         python -m build
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@release/v1.12
-  send-pull-request:
-    uses: openkim/developer-platform/.github/workflows/upversion-pypi-package-and-send-pr.yml@main
+  send-pull-requests:
+    uses: ilia-nikiforov-umn/gh-actions-playground/.github/workflows/upversion-package-and-send-pr.yml@main
     secrets: inherit
+    needs: deploy
