--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,7 +56,7 @@ jobs:
         shell: bash -el {0}
         run: |
           python pre_setup.py
-          sudo python -m pip install .
+          python -m pip install .
 
       - name: Run tests
         shell: bash -el {0}
